--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,22 +8,22 @@
 
     <item
         android:id="@+id/navigation_system"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="System" />
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/title_system" />
 
     <item
         android:id="@+id/navigation_schedule"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@android:drawable/ic_menu_recent_history"
         android:title="@string/title_schedule" />
 
     <item
         android:id="@+id/navigation_plants"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@android:drawable/ic_menu_gallery"
         android:title="@string/title_plants" />
 
     <item
         android:id="@+id/navigation_test"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="?android:attr/actionModeFindDrawable"
         android:title="@string/title_test" />
 
 </menu>
