--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
             android:text="@string/connection_status" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/image_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
