--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -24,15 +24,8 @@
             android:layout_weight="10"
             android:text="@string/system_water_level" />
 
-        <TextView
-            android:id="@+id/text_system_connection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="@string/connection_status" />
-
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/image_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
