Restructure schedule to use VM and map

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -24,7 +24,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="@string/system_hose"
+                android:text="@string/schedule_hose"
                 android:textAlignment="center"
                 android:textSize="20sp" />
 
