--- a/app/src/main/res/layout/fragment_plants.xml
+++ b/app/src/main/res/layout/fragment_plants.xml
@@ -10,10 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="65dp"
         android:gravity="top"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:orientation="horizontal">
 
         <GridView
             android:id="@+id/gridView_plants"
