--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -6,12 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".ui.test.TestFragment">
 
-    <TextView
-        android:id="@+id/text_test"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button_test_1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="160dp"
+        android:text="Test 1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_test_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:text="Test 2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_test_1" />
+
+    <Button
+        android:id="@+id/button_test_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test 3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_test_2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
